# script_template

./: Makefile  README.md  conftest.py  pre-commit.sh  pyproject.toml  teste.db
src/: main.py  model.py  models.py
tests/: test_capture_data.py
