[tool.poetry]
name = "template_script"
version = "0.1.0"
description = "Template to execute scripts"
authors = ["Jônatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
SQLAlchemy = "^1.4.31"
mysql-connector-python = "^8.0.28"
httpx = "^0.22.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
